--- a/app/src/main/res/layout/activity_choose_login_registration.xml
+++ b/app/src/main/res/layout/activity_choose_login_registration.xml
@@ -4,17 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.tasktinder.tinder.ChooseLoginRegistrationActivity"
-    android:orientation="vertical">
+    android:background="#FFF3A3"
+    android:orientation="vertical"
+    tools:context="com.tasktinder.tinder.ChooseLoginRegistrationActivity">
+
     <Button
+        android:id="@+id/login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="login"
-        android:id="@+id/login"/>
+        android:text="login" />
+
     <Button
+        android:id="@+id/register"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="register"
-        android:id="@+id/register"/>
+        android:text="register" />
 
 </LinearLayout>
