--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -4,40 +4,45 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.tasktinder.tinder.SettingsActivity"
+    android:background="#FFF3A3"
     android:orientation="vertical"
-    android:padding="20sp">
+    android:padding="20sp"
+    tools:context="com.tasktinder.tinder.SettingsActivity">
+
     <ImageView
+        android:id="@+id/profileImage"
         android:layout_width="100sp"
         android:layout_height="100sp"
-        android:id="@+id/profileImage"
-        android:src="@mipmap/ic_launcher"
-        android:layout_marginBottom="20sp" />
+        android:layout_marginBottom="20sp"
+        android:src="@mipmap/ic_launcher" />
+
     <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/name"
-        android:background="@null"
-        android:hint="Name"
-        android:layout_marginBottom="20sp"/>
-    <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20sp"
+        android:background="@null"
+        android:hint="Name" />
+
+    <EditText
         android:id="@+id/phone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20sp"
         android:background="@null"
         android:hint="Phone"
-        android:layout_marginBottom="20sp"
-        android:inputType="phone"/>
+        android:inputType="phone" />
 
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/confirm"
-        android:text="confirm"/>
-    <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="confirm" />
+
+    <Button
         android:id="@+id/back"
-        android:text="back"/>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="back" />
 
 </LinearLayout>
