--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,45 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_gravity="center"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:paddingLeft="40sp"
-    android:paddingRight="40sp"
-    android:paddingTop="20sp"
-    android:paddingBottom="20sp"
+    android:layout_gravity="center"
+    android:background="#FFF3A3"
+    android:clipToPadding="false"
     android:outlineProvider="bounds"
-    android:clipToPadding="false">
+    android:paddingLeft="40sp"
+    android:paddingTop="20sp"
+    android:paddingRight="40sp"
+    android:paddingBottom="20sp">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        app:cardCornerRadius="4dp"
         android:elevation="2dp"
-        android:id="@+id/cardView">
+        app:cardCornerRadius="4dp">
+
         <LinearLayout
-            android:layout_gravity="center"
             android:layout_width="300dp"
             android:layout_height="350dp"
+            android:layout_gravity="center"
+            android:background="#F6E000"
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/image"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
-                android:id="@+id/image"
-                android:scaleType="centerCrop"
-                />
+                android:scaleType="centerCrop" />
+
             <TextView
                 android:id="@+id/name"
-                android:textSize="30sp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center|left"
                 android:paddingLeft="20sp"
                 android:textColor="@android:color/black"
-                android:gravity="center|left"
-                tools:text="hello"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:textSize="30sp"
+                tools:text="hello" />
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
