--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFF3A3"
+    android:gravity="center"
     android:orientation="vertical"
+    android:paddingLeft="20sp"
+    android:paddingRight="20sp"
     tools:context="com.tasktinder.tinder.RegistrationActivity">
 
     <EditText
@@ -24,5 +27,10 @@
         android:id="@+id/login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Login" />
+        android:layout_marginTop="20sp"
+        android:backgroundTint="@color/colorPrimary"
+        android:text="Login"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 </LinearLayout>
