--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -4,17 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.tasktinder.tinder.RegistrationActivity"
-    android:orientation="vertical">
+    android:background="#FFF3A3"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:padding="20sp"
+    tools:context="com.tasktinder.tinder.RegistrationActivity">
+
     <EditText
+        android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="name"
-        android:id="@+id/name"/>
+        android:hint="name" />
+
     <RadioGroup
+        android:id="@+id/radioGroup"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/radioGroup">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/textView"
@@ -34,19 +39,27 @@
             android:layout_height="wrap_content"
             android:text="Accept" />
     </RadioGroup>
+
     <EditText
+        android:id="@+id/email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="email"
-        android:id="@+id/email"/>
+        android:hint="email" />
+
     <EditText
+        android:id="@+id/password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="password"
-        android:id="@+id/password"/>
+        android:hint="password" />
+
     <Button
+        android:id="@+id/register"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/colorPrimary"
+        android:lineSpacingExtra="20sp"
         android:text="Register"
-        android:id="@+id/register"/>
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 </LinearLayout>
